--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.url=jdbc:mysql://localhost:3308/EtablissementScolaire?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
 
+spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=create
+
+
+spring.jpa.properties.hibernate.format_sql=true
