--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>EtablissementScolaire</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>EtablissementScolaire</name>
-	<description>Projet pour le groupe scolaire</description>
+	<description>Projet pour le groupe scolairexxxxxxxxxxxxxxxxxxxxxxxxx</description>
 
 	<properties>
 		<java.version>1.8</java.version>
