modification version dans pom

--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,10 @@
 	<artifactId>EtablissementScolaire</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>EtablissementScolaire</name>
-	<description>Projet pour le groupe scolairexxxxxxxxxxxxxxxxxxxxxxxxx</description>
+	<description>Projet pour le groupe scolaire</description>
 
 	<properties>
-		<java.version>1.7</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 
 	<dependencies>
