--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 	
 	<developers>
 		<developer>
-			<name>Gregoire Brebner</name>
+			<name>Grégoire Brebner</name>
 			<roles>
 				<role>Tech Lead</role>
 			</roles>
