Changement dans pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
 		<developer>
 			<name>Jeanne-Marie Mathevet</name>
 			<roles>
-				<role>Developper</role>
+				<role>Developer</role>
 			</roles>
 			<email>jmmathevet@gmail.com</email>
 		</developer>
