--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+spring.batch.initialize-schema=always
+file.name=etudiants.csv
+
+
 spring.datasource.url=jdbc:mysql://localhost:3308/EtablissementScolaire?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
