--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.batch.initialize-schema=always
-file.name=etudiants.csv
+#file.name=etudiants.csv
 
 
 spring.datasource.url=jdbc:mysql://localhost:3308/EtablissementScolaire?serverTimezone=UTC
@@ -15,5 +15,15 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
+##Email sender config
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=intiformintilyon2020@gmail.com
+spring.mail.password=azerty1234*
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+##Profile
 # dev | prod
 spring.profiles.active=dev
