modif de application.properties dans test pour prendre en compte l'existance de JavaMailSender

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,11 +4,11 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-#spring.jpa.show-sql=true
-#
-#spring.jpa.hibernate.ddl-auto=create
-#
-#spring.jpa.properties.hibernate.format_sql=true
-#
-#logging.level.org.hibernate.SQL=DEBUG
-#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+##Email sender config
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=intiformintilyon2020@gmail.com
+spring.mail.password=azerty1234*
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
